added video controls for background video

--- a/public/header.html
+++ b/public/header.html
@@ -1,6 +1,10 @@
-      <img style="opacity:0.8" src="/static/images/menu.jpg" alt="Mango Riviera Resort">
-      <div><span style="font-size:22px; font-family: Chalkduster, Helvetica, sans-serif;"> Welcome to Mango Riviera</span>
-      <img style="max-width:50px;" src="/static/images/sun.png" alt="logo"> &nbsp;&nbsp;&nbsp;
-      {{!-- <span id="weather_placeholder"></span> --}}
-      <a class="lists" href="/{{firstlink}}.hbs">&nbsp {{firstlink}}</a> &nbsp &nbsp <a class="lists" href="/tour.hbs">Virtual tour</a></div>
-  
+      <img src="/static/images/menu.jpg" alt="Mango Riviera Resort">
+      <div>
+            <span style="font-size:22px; font-family: Chalkduster, Helvetica, sans-serif;"> Welcome to Mango Riviera</span>
+            <img style="max-width:50px;" src="/static/images/sun.png" alt="logo"> &nbsp;&nbsp;&nbsp;
+            <a class="lists" href="/{{firstlink}}.hbs">&nbsp {{firstlink}}</a> &nbsp &nbsp 
+            <a class="lists" href="/tour.hbs">Virtual tour</a>&nbsp &nbsp 
+            <a class="lists" target="_blank" href="https://github.com/aripovula/MangoRivieraNodeJSv.2">
+                  Link to Github repo</a>&nbsp &nbsp 
+            <!-- <a class="lists" href="#" id="myBtn" onclick="myFunction()">Play/Pause</a> -->
+      </div>
