added dynamic tables on left panel, added shoutBoard using socket.io, amended layout and format of home page

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,8 +9,9 @@
     </div>
 
     <h4>Spa and Wellness</h4>  <!- spa Wellness, fitness O'zone, crossfit ManGo->
-    <ul id="tabspa"></ul>
-    <h4>Pools</h4>  <!- dolphine show, visit ancient castle, sport contest ->
+        <ul id="tabspa"></ul>
     <h4>Meals</h4>  <!- dolphine show, visit ancient castle, sport contest ->
+        <ul id="tabmeals"></ul>
     <h4>Services</h4>  <!- airport shuttle, room service, sport contest ->
+        <ul id="tabservices"></ul>
 </div>
