added dropdown menus

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,8 +3,9 @@
 <!- activity, rating, percentage booked, book or enroll buttons ->
 
 <div class="boxedtransp">
-    <div>        
-        <h4>Activities</h4>  <!- dolphine show, visit ancient castle, sport contest   ->
+    <div>    
+            <!-- <legend>Booking:</legend>     -->
+        <legend>Activities</legend>
         <ul id="tab"></ul>
     </div>
 
