added initial primitive working MVC setup

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,7 +5,7 @@
 <div class="boxedtransp">
     <div>    
             <!-- <legend>Booking:</legend>     -->
-        <legend>Activities</legend>
+        <legend style="font-size:16px">Activities</legend>
         <ul id="tab"></ul>
     </div>
 
