--- a/public/header.html
+++ b/public/header.html
@@ -3,7 +3,7 @@
             <span style="font-size:22px; font-family: Chalkduster, Helvetica, sans-serif;"> Welcome to Mango Riviera</span>
             <img style="max-width:50px;" src="/static/images/sun.png" alt="logo"> &nbsp;&nbsp;&nbsp;
             <a class="lists" href="/{{firstlink}}.hbs">&nbsp {{firstlink}}</a> &nbsp &nbsp 
-            <a class="lists" href="/pickform.html">Virtual tour</a>&nbsp &nbsp 
+            <a class="lists" href="/bookform.html">Virtual tour</a>&nbsp &nbsp 
             <a class="lists" target="_blank" href="https://github.com/aripovula/MangoRivieraNodeJSv.2">
                   Link to Github repo</a>&nbsp &nbsp 
             <!-- <a class="lists" href="#" id="myBtn" onclick="myFunction()">Play/Pause</a> -->
