changed from html to hbs to enable passing value from controllers. Now home.hbs is really organised

--- a/public/bookform.html
+++ b/public/bookform.html
@@ -91,7 +91,7 @@
 
   </div>
 
-      // script for tooltips
+      <!-- // script for tooltips -->
       <script>
       $(document).ready(function(){
           $('[data-toggle="tooltip"]').tooltip();   
