--- a/public/datepick.html
+++ b/public/datepick.html
@@ -4,7 +4,7 @@
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
-
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
