Datepicker as a partial is working as expected now

--- a/public/bookform.html
+++ b/public/bookform.html
@@ -37,7 +37,7 @@
 
         <!-- code for HEADER / MENU partial -->
         <script id="header-partial" type="text/x-handlebars-template">
-          {{> header firstlink = "About"}}
+          {{> header firstlink = "Home"}}
         </script>
 
         <div id="header_placeholder"></div>
