--- a/public/rightpanel.html
+++ b/public/rightpanel.html
@@ -12,7 +12,7 @@
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <!-- <script src="/js/libs/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="socket.io/socket.io.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
     <script type='text/javascript' src='/js/libs/hbs.js'></script>
     <script src="/js/libs/moment-with-locales.js"></script>
 
