--- a/public/NOTindex.html
+++ b/public/NOTindex.html
@@ -37,7 +37,7 @@
 
         <!-- code for HEADER / MENU partial -->
         <script id="header-partial" type="text/x-handlebars-template">
-          {{> header firstlink = "About"}}
+          {{> header room_n = room_n}}
         </script>
 
         <div id="header_placeholder"></div>
