chats are auto-updated based on selected interest group reading MomgoDB collection using Socket io

--- a/public/rightpanel.html
+++ b/public/rightpanel.html
@@ -29,7 +29,7 @@
   <body>
             
       <div class="boxedtransp">
-        <label>Announcements and specials !</label>
+        <label> &nbsp; Announcements and specials !</label>
         <div style="height:200px;overflow: scroll;">
           <ol id="shoutboard"></ol>
         </div>
@@ -42,7 +42,7 @@
         </div>
   
     <div class="boxedtransp">
-        <label>Chat with other guests sharing similar interests - select an Interest group first !</label>
+        <label> &nbsp; Chat with other guests sharing similar interests - select an Interest group first !</label>
         <div style="height:100px;overflow: scroll;">
           <ol id="messages"></ol>
         </div>
@@ -50,7 +50,7 @@
 
     <script id="chat-template" type="x-handlebars-template">
         <!-- {{#each this}} -->
-          <p><span style="color:red">{{from}}</span> - <span style="color:gray">@ {{timePosted}} </span> : <span style="color:green"> {{text}} </span></p>
+          <p><span style="color:red">{{from}}</span> - <span style="color:gray"> {{timePosted}} </span> : <span style="color:green"> {{text}} </span></p>
         <!-- {{/each}} -->
       </script>
 
