made fine-tuning changes on interest group chats including auto-deletion of 7 day old chats, started table auto-updates

--- a/public/bookform.html
+++ b/public/bookform.html
@@ -132,7 +132,7 @@
         </script>
 
         <script src="/js/index2.js"></script>
-        <!-- <script src="/js/simulator.js"></script> -->
+        <!-- <script src="/js/shoutMessageSimulator.js"></script> -->
 
       <!-- <script id="table-partial" type="text/x-handlebars-template">
         {{> table firstlink = "About"}}
