--- a/public/NOTindex.html
+++ b/public/NOTindex.html
@@ -173,7 +173,7 @@
         </script>
 
         <script src="/js/index.js"></script>
-        <!-- <script src="/js/simulator.js"></script> -->
+        <!-- <script src="/js/shoutMessageSimulator.js"></script> -->
 
       <!-- <script id="table-partial" type="text/x-handlebars-template">
         {{> table firstlink = "About"}}
