Added new feature - now users can cancel bookings and buys

--- a/public/NOTindex.html
+++ b/public/NOTindex.html
@@ -172,7 +172,7 @@
         </table> 
         </script>
 
-        <script src="/js/index.js"></script>
+        <script src="/js/index2.js"></script>
         <!-- <script src="/js/shoutMessageSimulator.js"></script> -->
 
       <!-- <script id="table-partial" type="text/x-handlebars-template">
