--- a/public/bookform.html
+++ b/public/bookform.html
@@ -29,8 +29,8 @@
   <body style="background-size: 100%; background-attachment: fixed;" background="/static/images/sandbeach.jpeg">
 
     
-    <script type="text/javascript" src="/js/weather.js"></script>
-    <script type="text/javascript" src="/js/weatherScheduler.js"></script>
+    <!-- <script type="text/javascript" src="/js/weather.js"></script>
+    <script type="text/javascript" src="/js/weatherScheduler.js"></script> -->
 
     <div id="content">
       
